# lmtp-dkim

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .yamlfmt.yaml  AGENTS.md  Cargo.toml  README.md  clippy.toml  renovate.json  rust-toolchain.toml
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yml  mutants.yml
crates/arc/: Cargo.toml
crates/arc/src/: auth_results.rs  chain.rs  headers.rs  lib.rs  seal.rs
crates/dkim/: Cargo.toml
crates/dkim/src/: canonicalize.rs  dns.rs  key.rs  lib.rs  sign.rs  signature.rs  tag_list.rs  verify.rs
crates/email-primitives/: Cargo.toml
crates/email-primitives/src/: address.rs  error.rs  header.rs  lib.rs  message.rs  quotes.rs
crates/email-primitives/src/address/: domain.rs  local_part.rs  owned_reverse_path.rs  reverse_path.rs
crates/lmtp/: Cargo.toml
crates/lmtp/src/: codec.rs  command.rs  lib.rs  response.rs  server.rs  session.rs
crates/service/: Cargo.toml
crates/service/src/: config.rs  inbound.rs  main.rs  outbound.rs
crates/service/src/config/: arc.rs  dkim_signing.rs  downstream.rs  mod.rs  server_settings.rs
crates/service/src/inbound/: downstream.rs  handler.rs  mod.rs
crates/service/src/outbound/: downstream.rs  handler.rs  mod.rs
tools/cargo-bin/: Cargo.toml
tools/cargo-bin/src/: main.rs
