[workspace]
resolver = "2"
members = [
    "crates/email-primitives",
    "crates/lmtp",
    "crates/dkim",
    "crates/arc",
    "crates/service",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/andrewaylett/lmtp-dkim"

[workspace.dependencies]
# Local crates
email-primitives = { path = "crates/email-primitives" }
lmtp              = { path = "crates/lmtp" }
dkim              = { path = "crates/dkim" }
arc               = { path = "crates/arc" }

# Async runtime (tokio 1.x is the de-facto standard async runtime)
tokio        = { version = "1", features = ["full"] }
tokio-util   = { version = "0.7", features = ["codec"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

# Byte buffers
bytes = "1"

# Parsing (winnow is the modern successor to nom; zero-copy, combinator-based)
winnow = "1"

# Cryptography
# ring provides RSA-PKCS1v15-SHA256 and Ed25519, the two DKIM algorithms
# defined in RFC 6376 section 3.3 and RFC 8463.
ring   = "0.17"
base64 = "0.22"

# DNS – used to look up DKIM public keys (_domainkey TXT records, RFC 6376 §3.6)
# and for SPF/DMARC lookups in the service.
hickory-resolver = "0.26.0"

# Error handling
thiserror = "2"

# Structured, levelled logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Configuration and CLI (service crate only)
serde = { version = "1", features = ["derive"] }
toml  = "1"
clap  = { version = "4", features = ["derive", "env"] }

# Error propagation in binaries (not for libraries)
anyhow = "1"

[workspace.lints.rust]
dead_code       = "deny"
missing_docs    = "deny"
unreachable_pub = "deny"
unused_imports  = "deny"

# Lint enforcement
unfulfilled_lint_expectations = "deny"

[workspace.lints.clippy]
# Lint groups (lower priority so individual overrides take effect)
pedantic = { level = "deny", priority = -2 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }

# Selected restriction lints
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
arbitrary_source_item_ordering = "deny"
as_pointer_underscore = "deny"
assertions_on_result_states = "deny"
cfg_not_test = "deny"
clone_on_ref_ptr = "deny"
derive_partial_eq_without_eq = "deny"
exhaustive_enums = "deny"
exhaustive_structs = "deny"
expect_used = "deny"
fn_to_numeric_cast_any = "deny"
if_then_some_else_none = "deny"
impl_trait_in_params = "deny"
#indexing_slicing = "deny"
map_err_ignore = "deny"
missing_assert_message = "deny"
missing_asserts_for_indexing = "deny"
mixed_read_write_in_expression = "deny"
panic = "deny"
unwrap_used = "deny"
# Project-wide allowances
missing_panics_doc = "allow"  # stubs use todo!() which panics; revisit once implemented
module_name_repetitions = "allow"  # conventional for re-exported types (e.g. dkim::DkimSignature)
wildcard_imports        = "deny"  # idiomatic in test modules (use super::*)
