[package]
name        = "dkim"
description = "DKIM signing and verification per RFC 6376 and RFC 8463"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
email-primitives  = { workspace = true }
bytes             = { workspace = true }
thiserror         = { workspace = true }
tokio             = { workspace = true }
tracing           = { workspace = true }
winnow            = { workspace = true }
ring              = { workspace = true }
base64            = { workspace = true }
hickory-resolver  = { workspace = true }

[lints]
workspace = true
