[package]
name        = "email-primitives"
description = "Core email types shared across the lmtp, dkim, and arc crates"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
bytes     = { workspace = true }
thiserror = { workspace = true }
winnow    = { workspace = true }

[lints]
workspace = true
