[package]
name        = "service"
description = "Email milter service: ARC-validates inbound mail and DKIM-signs outbound mail"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
name = "lmtp-dkim"
path = "src/main.rs"

[dependencies]
email-primitives   = { workspace = true }
lmtp               = { workspace = true }
dkim               = { workspace = true }
arc                = { workspace = true }
bytes              = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
serde              = { workspace = true }
toml               = { workspace = true }
clap               = { workspace = true }
hickory-resolver   = { workspace = true }
anyhow             = { workspace = true }

[lints]
workspace = true
